sql/item.h
@@ -1183,6 +1183,16 @@ public:
       If value is not null null_value flag will be reset to FALSE.
   */
   virtual longlong val_int()=0;
+  Longlong_null to_longlong_null()
+  {
+    longlong nr= val_int();
+    /*
+      C++ does not guarantee the order of parameter evaluation,
+      so to make sure "null_value" is passed to the constructor
+      after the val_int() call, val_int() is caled on a separate line.
+    */
+    return Longlong_null(nr, null_value);
+  }
   /**
     Get a value for CAST(x AS SIGNED).
     Too large positive unsigned integer values are converted
